# snarkVM

./: CONTRIBUTING.md  Cargo.toml  README.md  check.txt
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
algorithms/: Cargo.toml
algorithms/benches/fft/: fft.rs
algorithms/benches/snark/: varuna.rs
algorithms/cuda/: Cargo.toml
algorithms/src/: lib.rs
algorithms/src/crypto_hash/: poseidon.rs
algorithms/src/srs/: universal_prover.rs
algorithms/src/traits/: algebraic_sponge.rs  snark.rs
circuit/: Cargo.toml
circuit/account/: Cargo.toml
circuit/algorithms/: Cargo.toml
circuit/collections/: Cargo.toml
circuit/environment/: Cargo.toml
circuit/environment/witness/: Cargo.toml
circuit/network/: Cargo.toml
circuit/program/: Cargo.toml
circuit/types/: Cargo.toml
circuit/types/address/: Cargo.toml
circuit/types/boolean/: Cargo.toml
circuit/types/field/: Cargo.toml
circuit/types/group/: Cargo.toml
circuit/types/integers/: Cargo.toml
circuit/types/scalar/: Cargo.toml
circuit/types/string/: Cargo.toml
console/: Cargo.toml
console/account/: Cargo.toml
console/algorithms/: Cargo.toml
console/collections/: Cargo.toml
console/network/: Cargo.toml
console/program/: Cargo.toml
console/types/: Cargo.toml
console/types/address/: Cargo.toml
curves/: Cargo.toml
curves/src/: lib.rs
fft/: Cargo.toml
fft/src/: lib.rs
fields/: Cargo.toml
fields/src/: fp12_2over3over2.rs  fp2.rs  fp6_3over2.rs  fp_256.rs  fp_384.rs  lib.rs  macros.rs  poly_stub.rs
ledger/: Cargo.toml
ledger/authority/: Cargo.toml
ledger/benches/: transaction.rs
ledger/block/: Cargo.toml
ledger/committee/: Cargo.toml
ledger/narwhal/: Cargo.toml
ledger/puzzle/: Cargo.toml
ledger/query/: Cargo.toml
ledger/src/: advance.rs  check_next_block.rs  find.rs  lib.rs  tests.rs
ledger/store/: Cargo.toml
ledger/test-helpers/: Cargo.toml
metrics/: Cargo.toml
mpc-algebra/: Cargo.toml  README.md  check.txt
mpc-algebra/examples/: gsz20.rs
mpc-algebra/src/: channel.rs  com.rs  group.rs  lib.rs  reveal.rs  reveal_impl.rs  reveal_trait.rs
mpc-net/: Cargo.toml  README.md
mpc-net/examples/: broadcast.rs
mpc-net/src/: multi.rs  two.rs
mpc-snarks/: .gitignore  Cargo.toml  README.md
mpc-snarks/scripts/: bench.zsh
mpc-snarks/src/: client.rs  lib.rs  marlin.rs  proof.rs  silly.rs  test.rs  test_circuit.rs
mpc-trait/: Cargo.toml
msm/: Cargo.toml  README.md
msm/src/: lib.rs
parameters/: Cargo.toml
parameters/examples/: inclusion.rs
synthesizer/: Cargo.toml
synthesizer/benches/: kary_merkle_tree.rs
synthesizer/process/: Cargo.toml
synthesizer/program/: Cargo.toml
synthesizer/snark/: Cargo.toml
synthesizer/tests/: test_process_execute.rs  test_vm_execute_and_finalize.rs
utilities/: Cargo.toml
utilities/derives/: Cargo.toml
vm/file/: prover.rs  verifier.rs
vm/package/: mod.rs
wasm/: Cargo.toml
(+155 files in other folders)
