[package]
name = "mpc-net"
version = "1.0.0"
authors = ["Victor Sint Nicolaas <victor@provable.com>", "Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
log = {version = "0.4"}
# ark-std = { path = "../utils", default-features = false }
derivative = { version = "2.0", features = ["use_core"]}
#crossbeam = "0.8"
rayon = "1.5.1"
[dev-dependencies]
structopt = { version = "0.3" }
env_logger = "0.8"
aleo-std = { version = "0.1.24" }
