[package]
name = "mpc-trait"
version = "1.0.0"
authors = ["Victor Sint Nicolaas <victor@provable.com>", "Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleo-std = { version = "0.1.24" }