[package]
name = "snarkvm-circuit-environment-witness"
version = "1.2.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A procedural macro to construct a witness in an environment"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true
