[package]
name = "snarkvm-console-types-address"
version = "1.2.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Type operations for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkvm-console-network-environment]
path = "../../network/environment"
version = "=1.2.1"

[dependencies.snarkvm-console-types-boolean]
path = "../boolean"
version = "=1.2.1"

[dependencies.snarkvm-console-types-field]
path = "../field"
version = "=1.2.1"

[dependencies.snarkvm-console-types-group]
path = "../group"
version = "=1.2.1"

[dev-dependencies.bincode]
version = "1.3"

[dev-dependencies.serde_json]
version = "1.0"
features = [ "preserve_order" ]
